kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: boompow-frontend
spec:
  selector:
    app: boompow-frontend
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
