kubernetes/redirect_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redirect
  namespace: boompow-next
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/permanent-redirect: https://boompow.banano.cc
spec:
  tls:
    - hosts:
        - bpow.banano.cc
      secretName: bpow-banano-cc-secret
  rules:
    - host: bpow.banano.cc
